--- a/src/pages/imageCarousel.css
+++ b/src/pages/imageCarousel.css
@@ -1,21 +1,27 @@
+.custom-navigation {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  z-index: 1;
+  background-color: rgba(0, 0, 0, 0);
+  margin-bottom: 30px;
+}
+
 .swiper-button-prev,
 .swiper-button-next {
   color: white;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.76);
   padding: 20px;
   border-radius: 50%;
   transition: background-color 0.3s ease;
+  cursor: pointer;
 }
 
 .swiper-button-prev:hover,
 .swiper-button-next:hover {
   background-color: rgba(0, 0, 0, 0.8);
-}
-
-.swiper-button-prev {
-  left: 50px;
-}
-
-.swiper-button-next {
-  right: 50px;
 }
